[gd_scene load_steps=3 format=2]

[ext_resource path="res://Art/Buttons/GlossariyButton.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Buttons/GlossariyButton.gd" type="Script" id=2]

[node name="TextureButton" type="TextureButton"]
margin_right = 131.0
margin_bottom = 16.0
rect_min_size = Vector2( 131, 0 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="button_down" from="." to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_TextureButton_button_up"]
[connection signal="pressed" from="." to="." method="_on_TextureButton_pressed"]
